# distopia_2_the_highway_warrior

./: .gitignore  CMakeLists.txt  bench_qcprot.cpp
distopia/: _distopia.pyx
distopia/tests/: test_distopia.py
include/: qcprot512.h
libdistopia/: CMakeLists.txt
libdistopia/src/: distopia.cpp
libdistopia/test/: test_mda_match.cpp
src/: qcprot512.cpp
